--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
