--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.294.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
